05-07-24 Fixes List Covers Responsive

--- a/resources/css/buttons.css
+++ b/resources/css/buttons.css
@@ -13,7 +13,7 @@
   }
 
   .btn-verde {
-    @apply bg-blue-400 text-white hover:bg-green-700;
+    @apply bg-green-400 text-white hover:bg-green-700;
   }
 
   .btn-rojo {
